--- a/index.html
+++ b/index.html
@@ -25,8 +25,13 @@
             </section>
 
             <section class="music-card">
+                <div class="steam-container">
+                <div class="steam"></div>
+                <div class="steam"></div>
+                <div class="steam"></div>
+                </div>
                 <h2>Now Playing</h2>
-                <p id="track-name">Favorite J-pop Mix</p>
+                <p id="track-name">Generative Jazz Improvisation</p>
                 <div class="visualizer">
                     <span></span><span></span><span></span><span></span>
                 </div>
