--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minimal Coffee & Chill</title>
+    <title>Minimal Jazz Coffee Timer</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -26,15 +26,12 @@
 
             <section class="music-card">
                 <div class="steam-container">
-                <div class="steam"></div>
-                <div class="steam"></div>
-                <div class="steam"></div>
+                    <div class="steam"></div>
+                    <div class="steam"></div>
+                    <div class="steam"></div>
                 </div>
                 <h2>Now Playing</h2>
-                <p id="track-name">Generative Jazz Improvisation</p>
-                <div class="visualizer">
-                    <span></span><span></span><span></span><span></span>
-                </div>
+                <p id="track-name">Generative J-pop Chord (Web Audio API)</p>
             </section>
         </main>
     </div>
